camhub.com (archived on 2009-10-18)
{
  "alexa_rank": 159900,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 9095,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.0,
  "homepage_snapshot_redirected_domain": "camhub.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091003200738id_/http://www.camhub.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091003200738id_/http%3A//camhub.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "camhub.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091018053046id_/http%3A//www.camhub.com/docs.php%3Fdoc%3Dprivacy%26",
  "policy_title": "CamHub - Privacy Policy",
  "policy_url": "camhub.com/docs.php?doc=privacy&",
  "sha1": "087f2f73c5e94f8abc154aaa2360f7583cc308e7",
  "simhash": 8873423969137337660,
  "simhash_updated": true,
  "site_hostname": "camhub.com",
  "site_url": "http://camhub.com",
  "smog": 14.46,
  "strict_updated": true,
  "timestamp": "20091018053046",
  "word_count": 1468,
  "year": 2009
}

--- a/c/ca/cam/camhub.com.html
+++ b/c/ca/cam/camhub.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the camhub.com privacy policy that was archived on 2009-04-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090418172315id_/http%3A//www.camhub.com/docs.php%3Fdoc%3Dprivacy%26) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the camhub.com privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018053046id_/http%3A//www.camhub.com/docs.php%3Fdoc%3Dprivacy%26) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="MSSmartTagsPreventParsing" content="TRUE">
@@ -9,7 +9,7 @@
 
 
 <title>CamHub - Privacy Policy</title>
-<link rel="stylesheet" type="text/css" href="http://static.gfx.camhub.com/skin/ch/style.css">
+<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/skin/ch/style.css">
 <script language="javascript">
 sakey = "";
 function chatNow_r( SMId )
@@ -76,30 +76,30 @@ if ( 0 ) chatNow( 0 );
 <center>
 <table border="0" cellspacing="0" cellpadding="0" width="720" class="mainside" bgcolor="#000000">
 	<tbody><tr>
-		<td width="247"><a href="http://www.camhub.com/?"><img src="http://static.gfx.camhub.com/skin/ch/images/head-logo.gif" width="247" height="56" border="0"></a></td>
-		<td width="131"><a href="http://www.camhub.com/?"><img src="http://static.gfx.camhub.com/skin/ch/images/head-home-home.gif" width="131" height="56" border="0"></a></td>
-		<td width="118"><a href="http://www.camhub.com/browse.php?"><img src="http://static.gfx.camhub.com/skin/ch/images/head-home-browse.gif" width="118" height="56" border="0"></a></td>
-		<td width="122"><a href="http://www.camhub.com/mypage.php?"><img src="http://static.gfx.camhub.com/skin/ch/images/head-home-mystream.gif" width="122" height="56" border="0"></a></td>
-		<td background="http://static.gfx.camhub.com/skin/ch/images/head-blankright.gif" valign="middle" align="center" width="102"><a href="http://www.camhub.com/login.php?"><img src="http://static.gfx.camhub.com/skin/ch/images/head-button-signin.gif" width="60" height="20" border="0"></a></td>
+		<td width="247"><a href="http://www.camhub.com/?"><img src="http://m1.nsimg.net/skin/ch/images/head-logo.gif" width="247" height="56" border="0"></a></td>
+		<td width="131"><a href="http://www.camhub.com/?"><img src="http://m1.nsimg.net/skin/ch/images/head-home-home.gif" width="131" height="56" border="0"></a></td>
+		<td width="118"><a href="http://www.camhub.com/browse.php?"><img src="http://m1.nsimg.net/skin/ch/images/head-home-browse.gif" width="118" height="56" border="0"></a></td>
+		<td width="122"><a href="http://www.camhub.com/mypage.php?"><img src="http://m1.nsimg.net/skin/ch/images/head-home-mystream.gif" width="122" height="56" border="0"></a></td>
+		<td background="http://m1.nsimg.net/skin/ch/images/head-blankright.gif" valign="middle" align="center" width="102"><a href="http://www.camhub.com/login.php?"><img src="http://m1.nsimg.net/skin/ch/images/head-button-signin.gif" width="60" height="20" border="0"></a></td>
 	</tr>
 	<tr>
-		<td background="http://static.gfx.camhub.com/skin/ch/images/head-tbar.gif" colspan="5" valign="middle" align="center" height="27">
+		<td background="http://m1.nsimg.net/skin/ch/images/head-tbar.gif" colspan="5" valign="middle" align="center" height="27">
 
 <table border="0" cellspacing="3" cellpadding="0">
     <tbody><tr>
-    	      <td valign="middle" align="center"><img src="http://static.gfx.camhub.com/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
+    	      <td valign="middle" align="center"><img src="http://m1.nsimg.net/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
       <td valign="middle" align="center">&nbsp;<a href="http://www.camhub.com/signup/?" class="subnav"><b>Join</b></a>&nbsp;</td>
-    	<td valign="middle" align="center"><img src="http://static.gfx.camhub.com/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
+    	<td valign="middle" align="center"><img src="http://m1.nsimg.net/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
     	<td valign="middle" align="center">&nbsp;<a href="http://www.camhub.com/searches.php?" class="subnav"><b>Search</b></a>&nbsp;</td>
-    	<td valign="middle" align="center"><img src="http://static.gfx.camhub.com/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
+    	<td valign="middle" align="center"><img src="http://m1.nsimg.net/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
     	<td valign="middle" align="center">&nbsp;<a href="http://www.camhub.com/search.php?" class="subnav"><b>Live Models</b></a>&nbsp;</td>
-    	<td valign="middle" align="center"><img src="http://static.gfx.camhub.com/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
+    	<td valign="middle" align="center"><img src="http://m1.nsimg.net/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
     	<td valign="middle" align="center">&nbsp;<a href="http://www.camhub.com/new.php?" class="subnav"><b>New Models</b></a>&nbsp;</td>
-    	<td valign="middle" align="center"><img src="http://static.gfx.camhub.com/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
+    	<td valign="middle" align="center"><img src="http://m1.nsimg.net/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
 	
 <!--
 	<td valign="middle" align="center">&nbsp;<a href="http://www.camhub.com/search.php?" class="subnav"><b>Newest Models</b></a>&nbsp;</td>
-	<td valign="middle" align="center"><img src="http://static.gfx.camhub.com/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
+	<td valign="middle" align="center"><img src="http://m1.nsimg.net/skin/ch/images/nav-sep.gif" width="2" height="18" border="0"></td>
  -->
     </tr>
 
@@ -117,7 +117,7 @@ if ( 0 ) chatNow( 0 );
 		<td colspan="3">
 <table border="0" cellspacing="0" cellpadding="0" width="712">
 	<tbody><tr>
-				<td class="salutation"><b>Welcome!</b> &nbsp; <font class="datetime">
+				<td align="left" class="salutation"><b>Welcome!</b> &nbsp; <font class="datetime">
 <script language="JavaScript" src="/js/PerfectTime.js"></script>
 <script language="JavaScript"><!--		
 var d = new Date();
@@ -149,7 +149,7 @@ langar['MonthsShort'] =
 var PT = new PerfectTime(0,langar);
 
 //--></script>
-<span class="PerfectTime" gmt_time="1240075394" fmt="%D, %M %j, %g:%i %a">Sat, Apr 18, 5:23 pm</span>
+<span class="PerfectTime" gmt_time="1255843846" fmt="%D, %M %j, %g:%i %a">Sun, Oct 18, 5:30 am</span>
 		</font></td>
 
 	</tr>
@@ -189,9 +189,9 @@ var PT = new PerfectTime(0,langar);
 //--></script>
 <table border="0" cellspacing="0" cellpadding="0" width="140">
 	<tbody><tr>
-		<td><img src="http://static.gfx.camhub.com/skin/ch/images/tab-left.gif" width="10" height="25" border="0"></td>
-		<td background="http://static.gfx.camhub.com/skin/ch/images/tab-body.gif" width="100%"><font class="tabhead">Search Models</font></td>
-		<td><img src="http://static.gfx.camhub.com/skin/ch/images/tab-right.gif" width="14" height="25" border="0"></td>
+		<td><img src="http://m1.nsimg.net/skin/ch/images/tab-left.gif" width="10" height="25" border="0"></td>
+		<td background="http://m1.nsimg.net/skin/ch/images/tab-body.gif" width="100%"><font class="tabhead">Search Models</font></td>
+		<td><img src="http://m1.nsimg.net/skin/ch/images/tab-right.gif" width="14" height="25" border="0"></td>
 	</tr>
 </tbody></table>
 <table border="0" cellspacing="0" cellpadding="1" width="140">
@@ -205,7 +205,7 @@ var PT = new PerfectTime(0,langar);
 			<table border="0" cellspacing="0" cellpadding="0">
 				<tbody><tr>
 					<td><input type="text" size="9" name="q" style="font-family: verdana,san-serif; font-size: 10px;">&nbsp;</td>
-					<td valign="middle"><input type="image" src="http://static.gfx.camhub.com/skin/ch/images/button-search.gif" width="51" height="16" border="0" align="right"></td>
+					<td valign="middle"><input type="image" src="http://m1.nsimg.net/skin/ch/images/button-search.gif" width="51" height="16" border="0" align="right"></td>
 				</tr>
 			</tbody></table>
 			<table border="0" cellspacing="0" cellpadding="0">
@@ -292,26 +292,26 @@ function selectBrowse( opt )
 			<table border="0" cellspacing="0" cellpadding="3" bgcolor="#111111" width="100%">
   				<tbody><tr>
     				<td align="center"><font class="greyhead"><b>Not a Member Yet?</b></font><br>
-    				<a href="http://www.camhub.com/signup/?"><img src="http://static.gfx.camhub.com/skin/ch/images/button-signupnow.gif" width="126" height="27" border="0"></a>
-    				<img src="http://static.gfx.camhub.com/skin/ch/images/line-dash.gif" width="133" height="8" border="0"><br>
+    				<a href="http://www.camhub.com/signup/?"><img src="http://m1.nsimg.net/skin/ch/images/button-signupnow.gif" width="126" height="27" border="0"></a>
+    				<img src="http://m1.nsimg.net/skin/ch/images/line-dash.gif" width="133" height="8" border="0"><br>
     					<table border="0" cellspacing="0" cellpadding="0" width="126">
 							<tbody><tr>
 								<td>Watch real live amateurs perform from their homes all over the world!</td>
 							</tr>
 							<tr>
-								<td><img src="http://static.gfx.camhub.com/skin/ch/images/spacer.gif" width="1" height="4" border="0" alt=""></td>
+								<td><img src="http://m1.nsimg.net/skin/ch/images/spacer.gif" width="1" height="4" border="0" alt=""></td>
         					</tr>
         					<tr>
-        						<td align="center"><a href="http://www.camhub.com/signup/?"><img src="http://static.gfx.camhub.com/skin/ch/images/signnow.jpg" width="126" height="213" border="0"></a></td>
+        						<td align="center"><a href="http://www.camhub.com/signup/?"><img src="http://m1.nsimg.net/skin/ch/images/signnow.jpg" width="126" height="213" border="0"></a></td>
         					</tr>
         					<tr>
-								<td><img src="http://static.gfx.camhub.com/skin/ch/images/spacer.gif" width="1" height="4" border="0" alt=""></td>
+								<td><img src="http://m1.nsimg.net/skin/ch/images/spacer.gif" width="1" height="4" border="0" alt=""></td>
         					</tr>
         					<tr>
 								<td>Discover for yourself why CamHub is the most popular live cam site!</td>
 							</tr>
 							<tr>
-								<td><img src="http://static.gfx.camhub.com/skin/ch/images/spacer.gif" width="1" height="4" border="0" alt=""></td>
+								<td><img src="http://m1.nsimg.net/skin/ch/images/spacer.gif" width="1" height="4" border="0" alt=""></td>
         					</tr>
     					</tbody></table>
      				</td>
@@ -341,9 +341,9 @@ function selectBrowse( opt )
 <center>
 <table border="0" cellspacing="0" cellpadding="0" width="554">
 	<tbody><tr>
-		<td class="tabhead"><img src="http://static.gfx.camhub.com/skin/ch/images/tab-left.gif" width="10" height="25" border="0"></td>
-		<td class="tabhead" background="http://static.gfx.camhub.com/skin/ch/images/tab-body.gif" width="100%">Privacy Policy</td>
-		<td class="tabhead"><img src="http://static.gfx.camhub.com/skin/ch/images/tab-right.gif" width="14" height="25" border="0"></td>
+		<td class="tabhead"><img src="http://m1.nsimg.net/skin/ch/images/tab-left.gif" width="10" height="25" border="0"></td>
+		<td class="tabhead" background="http://m1.nsimg.net/skin/ch/images/tab-body.gif" width="100%">Privacy Policy</td>
+		<td class="tabhead"><img src="http://m1.nsimg.net/skin/ch/images/tab-right.gif" width="14" height="25" border="0"></td>
 	</tr>
 </tbody></table>
 <table border="0" cellspacing="0" cellpadding="1" width="554">
@@ -466,7 +466,7 @@ We may use cookies to:
 		<td>&nbsp;</td>
 		<td>		
 <p>Because we care about the safety and privacy of children online, we comply with the Children’s Online Privacy Act of 1998 (COPA). COPA and its accompanying FTC regulation established United States federal law that protects the privacy of children using the Internet. CamHub does not knowingly collect contact or personal information from children under 13. Our sites are not intended to solicit information of any kind from children under 13, and we have designed our sites to block our knowing acceptance of information from children under 13 wherever age related information is requested.
-</p><p>Members areas of CamHub may contain content considered offensive to some, and are inaccessible to individuals under the age of 18 via a standard credit card wall, as advocated by the Communications Decency Act. It is possible that by fraud or deception we may receive information given to us or pertaining to minors under the age of 18. If we are notified of this, as soon as we verify the information, we will immediately obtain parental consent or otherwise delete the information from our servers. If you want to notify us of our receipt of information by minors, please do so by emailing us at <a href="contactsupport.php?" onclick="parent.exit=0" class="bunder">support@camhub.com</a>.
+</p><p>Members areas of CamHub may contain content considered offensive to some, and are inaccessible to individuals under the age of 18 via a standard credit card wall, as advocated by the Communications Decency Act. It is possible that by fraud or deception we may receive information given to us or pertaining to minors under the age of 18. If we are notified of this, as soon as we verify the information, we will immediately obtain parental consent or otherwise delete the information from our servers. If you want to notify us of our receipt of information by minors, please do so by emailing us at <a href="/contactsupport.php?" onclick="parent.exit=0" class="bunder">support@camhub.com</a>.
 		</p></td>
 		<td>&nbsp;</td>
 	</tr>
@@ -482,7 +482,7 @@ We may use cookies to:
 	<tbody><tr>
 		<td>&nbsp;</td>
 		<td>		
-<p>CamHub does not send unsolicited email to non-public addresses or to anyone who has requested we do not contact them. Any newsletters that we send are only sent to those who are active members of the site. To stop receiving email or newsletters from CamHub, either follow the instructions on the email or newsletter itself or send a request to be unsubscribed to <a href="contactsupport.php?" onclick="parent.exit=0" class="bunder">Support</a>.
+<p>CamHub does not send unsolicited email to non-public addresses or to anyone who has requested we do not contact them. Any newsletters that we send are only sent to those who are active members of the site. To stop receiving email or newsletters from CamHub, either follow the instructions on the email or newsletter itself or send a request to be unsubscribed to <a href="/contactsupport.php?" onclick="parent.exit=0" class="bunder">Support</a>.
 </p><p>CamHub also does not condone spam by affiliates or chat hosts advertising our site. Spam by our affiliates is prohibited by our Acceptable Use Policy. Further, according to our published policy, if CamHub becomes aware that a customer or affiliate is in violation of the law or this Acceptable Use Policy, CamHub reserves the right to impose disciplinary action in its sole discretion. Our disciplinary action may include: removal from our servers of files that violate our Acceptable Use Policy, the expulsion of the customer from the CamHub program, termination of CamHub services, and forfeiture of all commissions.
 		</p></td>
 		<td>&nbsp;</td>
@@ -500,7 +500,7 @@ We may use cookies to:
 	<tbody><tr>
 		<td>&nbsp;</td>
 		<td>		
-<p>If you have any questions about this Privacy Policy, please contact our customer service department at <a href="contactsupport.php?" onclick="parent.exit=0" class="bunder">support@camhub.com</a> and provide us with your name, your CamHub login name, and any information you feel is important.
+<p>If you have any questions about this Privacy Policy, please contact our customer service department at <a href="/contactsupport.php?" onclick="parent.exit=0" class="bunder">support@camhub.com</a> and provide us with your name, your CamHub login name, and any information you feel is important.
 </p><p>The address for correspondence by post is<br>
 </p><blockquote>CamHubs Limited<br>
 c/o Ariel Secretaries Limited<br>
@@ -540,7 +540,7 @@ P.O. Box 57528<br>
  <tr>
   <td align="center" colspan="3">
    <br><br><font class="footer">Welcome to CamHub, the hottest live web cam community! Our girls are working hard to give you the best live sex shows and sex chat on the internet so come and stream some of the hottest hardcore &amp; amateur webcam girls one on one. CamHub lets you chose from a variety of hot webcam girls that you want to see when you want to see.</font><br><br>
-   <br><font class="footer">© 2003-2009 CamHub Limited. All rights reserved.</font><br><br><iframe style="margin: 0px; padding: 0px; border: 0px;" width="0" height="0" frameborder="0" scrolling="no" src="http://www.camhub.com/pixel/?otype=iframe&amp;t=1240075394&amp;g=aHR0cDovL3N0YXRpYy5nZnguY2FtaHViLmNvbS9za2luL2NoL2ltYWdlcy9waXhlbC13aGl0ZS5naWY%3D&amp;urchin2=UA-5805843-1"></iframe>
+   <br><font class="footer">© 2003-2009 CamHub Limited. All rights reserved.</font><br><br><iframe style="margin: 0px; padding: 0px; border: 0px;" width="0" height="0" frameborder="0" scrolling="no" src="http://www.camhub.com/pixel/?otype=iframe&amp;t=1255843846&amp;g=aHR0cDovL20xLm5zaW1nLm5ldC9za2luL2NoL2ltYWdlcy9waXhlbC13aGl0ZS5naWY%3D&amp;urchin2=UA-5805843-1"></iframe>
 	<img src="http://www.naiadsystems.com/pixel.php?dom=d3d3LmNhbWh1Yi5jb20%3D" width="1" height="1" alt="" border="0">
 
   </td>
