--- a/l/la/lav/lavaplace.com.html
+++ b/l/la/lav/lavaplace.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lavaplace.com privacy policy that was archived on 2009-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616195138id_/http%3A//www.lavaplace.com/%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lavaplace.com privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018063455id_/http%3A//www.lavaplace.com/%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>Privacy &amp; Use Policy</title>
 <meta name="description" content="Privacy and Use Policy">
@@ -15,9 +15,19 @@
 <div id="header">
 <div id="logo">
 <a href="http://www.lavaplace.com/"><img src="http://images.lavaplace.com/images/lava_logo_valentine.gif" width="250" height="35" border="0" alt="LavaPlace Valentine Logo"></a>
+<div>english <a href="http://ru.lavaplace.com/?page=privacy_policy">по-русски</a> <a href="http://lt.lavaplace.com/?page=privacy_policy">lietuviškai</a></div>
 </div> <!-- // logo -->
 <div id="banner">
-<div>english <a href="http://ru.lavaplace.com/?page=privacy_policy">по-русски</a> <a href="http://lt.lavaplace.com/?page=privacy_policy">lietuviškai</a></div>
+<script type="text/javascript"><!--
+google_ad_client = "pub-9850064448676785";
+/* Lava top 468x60, created 7/1/09 */
+google_ad_slot = "2211560389";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </div> <!-- // banner -->
 </div> <!-- // header -->
 <div id="mainmenu" class="trs"><a href="http://www.lavaplace.com/">Home</a>
@@ -355,11 +365,10 @@ escape(document.referrer)+((typeof(screen)=="undefined")?"":
 screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 ";"+Math.random()+
 "' alt='' "+
-"border=0 width=88 height=31><\/a>")//--></script><a href="http://www.liveinternet.ru/click" target="_blank"><img src="http://counter.yadro.ru/hit?t14.1;r;s800*600*24;uhttps%3A//web.archive.org/web/20090616195138id_/http%253A//www.lavaplace.com/%253Fpage%253Dprivacy_policy;0.6573738404519596" alt="" border="0" width="88" height="31"></a><!--/LiveInternet-->
+"border=0 width=88 height=31><\/a>")//--></script><a href="http://www.liveinternet.ru/click" target="_blank"><img src="http://counter.yadro.ru/hit?t14.1;r;s800*600*24;uhttps%3A//web.archive.org/web/20091018063455id_/http%253A//www.lavaplace.com/%253Fpage%253Dprivacy_policy;0.16962359056152643" alt="" border="0" width="88" height="31"></a><!--/LiveInternet-->
 </p>
 	</div> <!-- footer //-->
 </div> <!-- gWrapper //-->
-
 
 
 </body></html>
