--- a/t/tr/tru/truebluekentucky.com.html
+++ b/t/tr/tru/truebluekentucky.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the truebluekentucky.com privacy policy that was archived on 2009-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616201418id_/http%3A//www.truebluekentucky.com/index.php/component/content/article/610.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the truebluekentucky.com privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018065012id_/http%3A//www.truebluekentucky.com/index.php/component/content/article/610.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
   <base href="http://www.truebluekentucky.com/index.php/component/content/article/610.html">
@@ -14,8 +14,8 @@
   <title>Privacy Policy</title>
   <link href="/templates/ja_purity/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link rel="stylesheet" href="http://www.truebluekentucky.com/modules/mod_yoo_login/mod_yoo_login.css.php" type="text/css">
-  <script type="text/javascript" src="/media/system/js/caption.js"></script>
   <script type="text/javascript" src="/media/system/js/mootools.js"></script>
+  <script type="text/javascript" src="/media/system/js/caption.js"></script>
   <script type="text/javascript">
 /*<![CDATA[*/
 	var jax_live_site = 'http://www.truebluekentucky.com/index.php';
@@ -94,7 +94,7 @@ var random_number = a;
 	
 			<script>
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=1;dcopt=ist;sz=728x90;ord=' + random_number + '?></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=1;dcopt=ist;sz=728x90;ord=7227427353?"></script>
+</script><script src="http://ad.doubleclick.net/adj/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=1;dcopt=ist;sz=728x90;ord=9382675445?"></script>
 <noscript>
 <A HREF="http://ad.doubleclick.net/jump/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=1;sz=728x90;ord='+random_number+'?" >
 <IMG SRC="http://ad.doubleclick.net/ad/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=1;sz=728x90;ord='+random_number+'?" border="0" height="90" width="728"></A>
@@ -110,7 +110,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/truebluekentucky.
 <!-- BEGIN: MAIN NAVIGATION -->
 <div id="ja-mainnavwrap">
 	<div id="ja-mainnav" class="clearfix">
-	<ul class="menu"><li class="parent item242"><a href="http://www.truebluekentucky.com/"><span>Home</span></a><ul><li class="item268"><a href="/index.php/home/search-past-tbk-articles.html"><span>Search</span></a></li><li class="item259"><a href="/index.php/home/subscribe.html"><span>Subscribe</span></a></li><li class="item325"><a href="/index.php/home/sportswar-affiliates.html"><span>Affiliates</span></a></li></ul></li><li class="parent item243"><a href="/index.php/forums.html"><span>Forums</span></a><ul><li class="item270"><a href="/index.php/forums/8-true-blue-insiders-premium-board.html"><span>True Blue Insiders</span></a></li><li class="item337"><a href="/index.php/forums/22-insider-recruiting.html"><span>Insider Recruiting</span></a></li><li class="item271"><a href="/index.php/forums/2-true-blue-hoops.html"><span>TBK Hoops</span></a></li><li class="item288"><a href="/index.php/forums/4-true-blue-football.html"><span>TBK Football</span></a></li><li class="item291"><a href="/index.php/forums/6-other-sports.html"><span>Other Sports</span></a></li><li class="item294"><a href="/index.php/forums/10-general-discussion.html"><span>General Discussion</span></a></li></ul></li><li class="parent item332"><a href="/index.php/community.html"><span>Community</span></a><ul><li class="item320"><a href="/index.php/community/chat.html"><span>Chat</span></a></li></ul></li><li class="parent item263"><a href="/index.php/blogs.html"><span>Blogs</span></a><ul><li class="item296"><a href="/index.php/blogs/blogger/Marc%20Maggard/"><span>TBK Audio Blog</span></a></li></ul></li><li class="parent item244"><a href="/index.php/basketball.html"><span>Basketball</span></a><ul><li class="item246"><a href="/index.php/basketball/basketball-news.html"><span>Basketball News</span></a></li><li class="item314"><a href="/index.php/basketball/basketball-schedule-2008-2009.html"><span>Basketball Schedule</span></a></li></ul></li><li class="parent item301"><a href="/index.php/football.html"><span>Football</span></a><ul><li class="item317"><a href="/index.php/football/football-news.html"><span>Football News</span></a></li><li class="item315"><a href="/index.php/football/football-schedule.html"><span>Football Schedule</span></a></li></ul></li><li class="parent item303"><a href="/index.php/forums/fbprofile/showposts/526-marc-maggard.html"><span>TBK Sources</span></a><ul><li class="item310"><a href="/index.php/forums/fbprofile/showposts/526-marc-maggard.html"><span>Marc Maggard</span></a></li><li class="item304"><a href="/index.php/forums/fbprofile/showposts/17120-davekersey.html"><span>Dave Kersey</span></a></li><li class="item305"><a href="/index.php/forums/fbprofile/showposts/9632-dutchman.html"><span>NJWildcat</span></a></li><li class="item306"><a href="/index.php/forums/fbprofile/showposts/11203-coachd.html"><span>John Dillard (Coach D)</span></a></li><li class="item309"><a href="/index.php/forums/fbprofile/showposts/302-kacat.html"><span>KACAT</span></a></li><li class="item311"><a href="/index.php/forums/fbprofile/showposts/995-clostradamus.html"><span>Michael Clos</span></a></li><li class="item323"><a href="/index.php/forums/fbprofile/showposts/14396-jaiden.html"><span>JAIDEN</span></a></li><li class="item324"><a href="/index.php/forums/fbprofile/showposts/19049-tigerbham.html"><span>Brooks Hansen</span></a></li></ul></li><li class="item343"><a href="/index.php/tbktipsmenu.html"><span>TBK Tips</span></a></li></ul>
+	<ul class="menu"><li class="parent item242"><a href="http://www.truebluekentucky.com/"><span>Home</span></a><ul><li class="item268"><a href="/index.php/home/search-past-tbk-articles.html"><span>Search</span></a></li><li class="item259"><a href="/index.php/home/subscribe.html"><span>Subscribe</span></a></li><li class="item325"><a href="/index.php/home/sportswar-affiliates.html"><span>Affiliates</span></a></li></ul></li><li id="current" class="parent active item243"><a href="/index.php/forums.html"><span>Forums</span></a><ul><li class="item270"><a href="/index.php/forums/8-true-blue-insiders-premium-board.html"><span>True Blue Insiders</span></a></li><li class="item337"><a href="/index.php/forums/22-insider-recruiting.html"><span>Insider Recruiting</span></a></li><li class="item271"><a href="/index.php/forums/2-true-blue-hoops.html"><span>TBK Hoops</span></a></li><li class="item288"><a href="/index.php/forums/4-true-blue-football.html"><span>TBK Football</span></a></li><li class="item291"><a href="/index.php/forums/6-other-sports.html"><span>Other Sports</span></a></li><li class="item294"><a href="/index.php/forums/10-general-discussion.html"><span>General Discussion</span></a></li></ul></li><li class="parent item332"><a href="/index.php/community.html"><span>Community</span></a><ul><li class="item320"><a href="/index.php/community/chat.html"><span>Chat</span></a></li></ul></li><li class="parent item263"><a href="/index.php/blogs.html"><span>Blogs</span></a><ul><li class="item296"><a href="/index.php/blogs/blogger/Marc%20Maggard/"><span>TBK Audio Blog</span></a></li></ul></li><li class="parent item244"><a href="/index.php/basketball.html"><span>Basketball</span></a><ul><li class="item246"><a href="/index.php/basketball/basketball-news.html"><span>Basketball News</span></a></li><li class="item314"><a href="/index.php/basketball/basketball-schedule-2008-2009.html"><span>Basketball Schedule</span></a></li></ul></li><li class="parent item301"><a href="/index.php/football.html"><span>Football</span></a><ul><li class="item317"><a href="/index.php/football/football-news.html"><span>Football News</span></a></li><li class="item315"><a href="/index.php/football/football-schedule.html"><span>Football Schedule</span></a></li></ul></li><li class="parent item303"><a href="/index.php/forums/fbprofile/showposts/526-marc-maggard.html"><span>TBK Sources</span></a><ul><li class="item310"><a href="/index.php/forums/fbprofile/showposts/526-marc-maggard.html"><span>Marc Maggard</span></a></li><li class="item304"><a href="/index.php/forums/fbprofile/showposts/17120-davekersey.html"><span>Dave Kersey</span></a></li><li class="item305"><a href="/index.php/forums/fbprofile/showposts/9632-dutchman.html"><span>NJWildcat</span></a></li><li class="item306"><a href="/index.php/forums/fbprofile/showposts/11203-coachd.html"><span>John Dillard (Coach D)</span></a></li><li class="item309"><a href="/index.php/forums/fbprofile/showposts/302-kacat.html"><span>KACAT</span></a></li><li class="item311"><a href="/index.php/forums/fbprofile/showposts/995-clostradamus.html"><span>Michael Clos</span></a></li><li class="item323"><a href="/index.php/forums/fbprofile/showposts/14396-jaiden.html"><span>JAIDEN</span></a></li><li class="item324"><a href="/index.php/forums/fbprofile/showposts/19049-tigerbham.html"><span>Brooks Hansen</span></a></li></ul></li><li class="item346"><a href="/index.php/tbktipsmenu.html"><span>TBK Tips</span></a></li></ul>
 			<div id="ja-search">
 			<form action="index.php" method="post">
 	<div class="search">
@@ -168,7 +168,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/truebluekentucky.
 			<input type="hidden" name="option" value="com_user">
 			<input type="hidden" name="task" value="login">
 			<input type="hidden" name="return" value="aHR0cDovL3d3dy50cnVlYmx1ZWtlbnR1Y2t5LmNvbS9pbmRleC5waHAvY29tcG9uZW50L2NvbnRlbnQvYXJ0aWNsZS82MTAuaHRtbA==">
-			<input type="hidden" name="31be401adf2a7fb638f7565c3b022100" value="1">
+			<input type="hidden" name="2ea98e39a7d284e624233b4f204ba767" value="1">
 		</span>
 		
 				
@@ -265,7 +265,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/truebluekentucky.
 
 <script>
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=2;sz=160x600;ord=' + random_number + '?></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=2;sz=160x600;ord=7227427353?"></script>
+</script><script src="http://ad.doubleclick.net/adj/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=2;sz=160x600;ord=9382675445?"></script>
 <noscript>
 <A HREF="http://ad.doubleclick.net/jump/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=2;sz=160x600;ord='+random_number+'?" >
 <IMG SRC="http://ad.doubleclick.net/ad/truebluekentucky.fsv/ros;sect=ros;fantasy=no;game=no;tile=2;sz=160x600;ord='+random_number+'?" border="0" height="600" width="160"></A>
@@ -313,6 +313,27 @@ try {
 var pageTracker = _gat._getTracker("UA-1616460-6");
 pageTracker._trackPageview();
 } catch(err) {}</script>
+
+<!-- Begin comScore Tag -->
+<script>
+    document.write(unescape("%3Cscript src='" + (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js' %3E%3C/script%3E"));
+</script><script src="https://sb.scorecardresearch.com/beacon.js"></script>
+
+<script>
+  COMSCORE.beacon({
+    c1:2,
+    c2:"6035210",
+    c3:"",
+    c4:"www.truebluekentucky.com",
+    c5:"",
+    c6:"",
+    c15:""
+  });
+</script>
+<noscript>
+  <img src="http://b.scorecardresearch.com/b?c1=2&c2=6035210&c3=&c4=www.truebluekentucky.com&c5=&c6=&c15=&cv=1.3&cj=1" style="display:none" width="0" height="0" alt="" />
+</noscript>
+<!-- End comScore Tag -->
 
 
 
