--- a/g/go/gob/gobankingrates.com.html
+++ b/g/go/gob/gobankingrates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gobankingrates.com privacy policy that was archived on 2009-04-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090425190915id_/http%3A//gobankingrates.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gobankingrates.com privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018071143id_/http%3A//www.gobankingrates.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,22 +8,31 @@
 <meta name="keywords" content="insurance, insurance rates">
 <meta name="description" content="Privacy Policy">
 <link rel="shortcut icon" href="/img/gobankingrates/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" type="text/css" href="/css/gobankingrates/home.css">
     <link rel="stylesheet" type="text/css" href="/css/gobankingrates/about.css">
     <script type="text/javascript" src="/js/jquery.js"></script>
-<script type="text/javascript" src="/js/global.js"></script>
 </head>
 <body>
 <div id="main">
     <div id="header">
         <a href="/" class="logo"><img height="76" width="186" alt="GoBankingRates.com" src="/img/gobankingrates/logo-186x76.gif"></a>
     </div>
-    <div class="mid-holder">
-    <div id="content">
+ 
+   <div class="mid-holder border">
+      <div id="content">
+
+            <div class="text-holder" style="width:500px">
+            
+            <!-- Category Header Partial -->
+                <h1 class="cat-title"></h1>
+
+
+            <div id="content">
 <div class="content_box" style="width: 98%;">
 <div class="breadcrumb"><a href="/" title="Home">Home</a> &gt; Privacy Policy</div>
 <div class="subb"><h1>Privacy Policy</h1></div>
-<div class="text">
+<div class="text" style="width:95%">
     <p>By visiting, using and/or submitting information to www.GoBankingRates.com, you are accepting the practices described in this Privacy Policy.</p>
     <p>Go Banking Rates takes your privacy seriously, and has published this Privacy Policy to explain how Go Banking Rates treats all information you may submit to www.GoBankingRates.com, except that information which is submitted pursuant to a sweepstakes entry. Refer to the Official Rules and Privacy Policy for each individual sweepstakes for Go Banking Rates's specific policies regarding information sharing and disclosure pursuant to sweepstakes entry.</p>
     <h2>Collection of Personally Identifiable Information</h2>
@@ -68,7 +77,7 @@
     </ul>
     <p>If you would like to opt-out of third-party advertising companies' use of such information, go to <a href="http://www.savingssavy.info/unsubscribe">www.SavingsSavy.info/unsubscribe</a></p>
     <h2>Newsletters and CAN-SPAM Compliance</h2>
-    <p>GoBanking.com sends only verified newsletters, specifically requested by Go Banking Rates subscribers. Subscriptions to GoBankingRates.com newsletters are verified by sending an e-mail. GoBankingRates.com is fully compliant with the Controlling the Assault of Non-Solicited Pornography and Marketing Act of 2003. </p>
+    <p>GoBankingRates.com sends only verified newsletters, specifically requested by Go Banking Rates subscribers. Subscriptions to GoBankingRates.com newsletters are verified by sending an e-mail. GoBankingRates.com is fully compliant with the Controlling the Assault of Non-Solicited Pornography and Marketing Act of 2003. </p>
     <h2>Cookie technology</h2>
     <p>"Cookies" are alphanumeric identifiers in the form of text files that are inserted and stored by your Web browser on your computer's hard drive. Go Banking Rates, its external service providers, internal service providers, and third-party advertising companies, may set and access cookies on your computer to track and store preferential information about you. Go Banking Rates, and its external service providers, internal service providers, and third-party advertising companies gather anonymous information about you through cookie technology on an aggregate level only. For example, a third-party advertising company may assign a cookie (and a Web beacon, described below) to you, to limit the amount of times you see a particular advertisement or to help better determine which advertisements to serve to you. Please note that most Internet browsers will allow you to stop cookies from being stored on your computer and to delete cookies stored on your computer.</p>
     <h2>Security</h2>
@@ -90,14 +99,43 @@
     <p>The headings contained in this Privacy Policy are for convenience of reference only, are not to be considered a part of this Privacy Policy, and shall not limit or otherwise affect in any way the meaning or interpretation of this Privacy Policy. </p><p>All covenants, agreements, representations and warranties made in this Privacy Policy, as may be amended by Go Banking Rates from time to time, shall survive your acceptance of this Privacy Policy. </p>    
     </div>
 </div>
+</div>           </div>
+        </div>
+        <div id="rightbar">
+            <!-- GIR Form -->
+<div id="InsuranceQuotes">
+<form id="gir" action="" method="get" target="_parent">
+   <select id="selectType" name="type" tabindex="1">
+      <option value="auto">Auto</option>
+      <option value="health">Health</option>
+      <option value="life">Life</option>
+      <option value="home">Home</option>
+    </select>
+<input name="zipcode" id="zipcode" maxlength="5" type="text" tabindex="2">
+<button type="submit" tabindex="3"></button>
+</form>
 </div>
-</div>
+
+<!-- end GIR Form -->            <!-- gofree credit-->
+       <div style="margin:5px 0;">
+            <a href="http://www.gofreecredit.com/index.php?id=11903"><img style="border:#8bc900 solid 1px; padding:1px;" src="/img/gobankingrates/GFC_300x250_ArrowLogo.gif" alt="Get Your Free Credit Report and Score"></a>
+        </div>      </div>
+     </div>
     <div class="footer">
     <div id="footer_article">   
     <div class="copyright">© Go Banking Rates</div>
+ <form action="http://www.gobankingrates.com/search" id="cse-search-box">
+                  <div class="search_footer">
+                    <input type="text" name="q" size="31">
+                    <input type="hidden" name="cx" value="012898476709393535303:xy2vkuzjgc0">
+                    <input type="hidden" name="cof" value="FORID:10;NB:1">
+                    <input type="hidden" name="ie" value="UTF-8">
+                    <button type="submit"><img src="/img/gobankingrates/searchbutton2.gif"></button>
+                  </div>
+                </form>
         <div class="contact">
             <ul>
-                <li class="first"><a href="mailto: info@gobankingrates.com">Contact</a></li>
+                <li class="first"><a href="mailto:info@gobankingrates.com">Contact</a></li>
                 <li><a href="/about/">About Us</a></li>
                 <li><a href="/sitemap/">Sitemap</a></li>
                 <li><a href="/privacy-policy/">Privacy Policy</a></li>
@@ -117,7 +155,9 @@
                 <dl>
                     <dt><a href="/investments/">INVESTMENTS</a></dt>
                     <dd><a href="/investments/brokerage/">Brokerage</a></dd>
+                    <dd><a href="/mortgage-rates/foreclosure/foreclosure-purchase/">Foreclosed Homes</a></dd>
                     <dd><a href="/investments/mutual-funds/">Mutual Funds</a></dd>
+                    <dd><a href="/investments/bonds/">Bonds</a></dd>
                 </dl>
             </div>
             <div class="sitemap">
@@ -125,16 +165,17 @@
                     <dt><a href="/mortgage-rates/">MORTGAGES</a></dt>
                     <dd><a href="/mortgage-rates/refinance/">Refinance</a></dd>
                     <dd><a href="/mortgage-rates/foreclosure/">Foreclosure</a></dd>
+                   <dd><a href="/mortgage-rates/foreclosure/foreclosure-prevention/">Foreclosure Help</a></dd>
                     <dd><a href="/mortgage-rates/first-time-home-buyer/">First Time Home Buyer</a></dd>
                 </dl>
             </div>
             <div class="sitemap">
                 <dl>
                     <dt><a href="/credit-card-rates/">CREDIT CARDS</a></dt>
-                    <dd><a href="/credit-card-rates/choice/rewards_credit_cards/">Credit Card Rewards</a></dd>
-                    <dd><a href="/credit-card-rates/choice/low_interest_credit_cards/">Low Interest Cards</a></dd>
-                    <dd><a href="/credit-card-rates/choice/credit_cards_for_bad_credit/">Bad Credit Cards</a></dd>
-                    <dd><a href="/credit-card-rates/choice/visa/">VISA</a></dd>
+                    <dd><a href="/credit-card-rates/choice--rewards_credit_cards/">Credit Card Rewards</a></dd>
+                    <dd><a href="/credit-card-rates/choice--low_interest_credit_cards/">Low Interest Cards</a></dd>
+                    <dd><a href="/credit-card-rates/choice--credit_cards_for_bad_credit/">Bad Credit Cards</a></dd>
+                    <dd><a href="/credit-card-rates/choice--visa/">VISA</a></dd>
                 </dl>
             </div>
             <div class="sitemap">
@@ -149,9 +190,10 @@
             <div class="sitemap">
                 <dl>
                     <dt><a href="/retirement/">RETIREMENT</a></dt>
-                    <dd><a href="/retirement/ira/">IRA</a></dd>
-                    <dd><a href="/retirement/401k/">401k</a></dd>
-                </dl>
+                   <dd><a href="/retirement/ira/">IRA</a></dd>
+                   <dd><a href="/retirement/401k/">401k</a></dd>
+                   <dd><a href="/retirement/401k/401k-rollover/">401K Rollover</a></dd>
+               </dl>
             </div>
             <div class="sitemap">
                 <dl>
@@ -175,14 +217,20 @@
                 <li><a href="http://www.goinsurancerates.com/auto-insurance/">Auto Insurance Rates</a></li>
                 <li><a href="http://www.goinsurancerates.com/health-insurance/">Health Insurance Rates</a></li>
                 <li><a href="http://www.goinsurancerates.com/life-insurance/">Life Insurance Rates</a></li>
-                <li><a href="http://www.usinsurancerates.com/">US Insurance Rates</a></li>
+	        	<li><a href="http://www.usinsurancerates.com/">US Insurance Rates</a></li>
             </ul>
         </div>
+        <br class="clear"><br>
+        <div class="social-media">
+            <span>Social Media Networks:</span>
+            <a class="rss" href="http://www.gobankingrates.com/feeds/">&nbsp;</a>
+            <a class="friendfeed" href="http://friendfeed.com/gobankingrates" target="_blank">&nbsp;</a>
+            <a class="twitter" href="http://twitter.com/gobankingrates" target="_blank">&nbsp;</a>
+        </div>
+    </div>
     </div>
 </div>
-    </div>
-
-<div id="navigation">
+ <div id="navigation">
     <div class="navwrapper">
         <ul class="hor_menu">
             <li><span><a href="/cd-rates/">CD<br>Rates</a></span></li>
@@ -196,6 +244,11 @@
     </div>
 </div>
 <div id="tid">S</div>
+<script type="text/javascript" src="/js/global.js"></script>
+    <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/global.js"></script>
+    <script type="text/javascript" src="/js/gobankingrates/insuranceQuotes.js"></script>
+    <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js"></script>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -216,4 +269,10 @@ function chkStatus() {
 window.onload = chkStatus;
 </script>
 
-</body></html>
+<div id="google" style="display:none">
+<script type="text/javascript">
+$("#google ins ins").appendTo("#googleAds");
+</script>
+
+
+</div></body></html>
