--- a/i/ia/iac/iacr.org.html
+++ b/i/ia/iac/iacr.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iacr.org privacy policy that was archived on 2008-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081220224546id_/http%3A//www.iacr.org./privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iacr.org privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018142957id_/http%3A//www.iacr.org/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>IACR privacy policy</title>
