--- a/b/br/bro/browserforthebetter.com.html
+++ b/b/br/bro/browserforthebetter.com.html
@@ -1,103 +1,61 @@
-<!--The following is the downloaded HTML source of the browserforthebetter.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619105417id_/http%3A//www.browserforthebetter.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the browserforthebetter.com privacy policy that was archived on 2009-10-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091018181857id_/http%3A//www.browserforthebetter.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Internet Explorer 8 - Browser for the Better</title>
-<script type="text/javascript"> 
-function setClass(id, newClass) {
-identity = document.getElementById(id);
-identity.className=newClass;}
-</script> 
-<style type="text/css">
-<!--
-body {margin-left: 0px; margin-top: 0px; margin-right: 0px; margin-bottom: 0px; background-color: #000; color: #FFF;}
-#cont_wrap { position: relative; width: 1024px; margin: 0 auto; }
-a { color: #fff; text-decoration: underline; }
-a:hover { color: #000; text-decoration: underline; }
-#container {height:768px; width:1024px; margin:auto; background:#383739;}
-#container #col1 {width:1024px; float:left;}
-#container #col1 #header {height:72px; background-color:#FFF; border-bottom-width: 8px; border-bottom-style: solid; border-bottom-color: #000;}
-#container #col1 #content {width:1024px; height:632px; background-image:url(images/privacy-back.jpg); background-repeat: no-repeat;}
-#container #col1 #content #text {width:960px; position: relative; top: 26px; left: 26px; font-family: Arial, Helvetica, sans-serif;}
-#container #silverdownload {position:relative; left:420px; bottom:3px;}
-#gb { position: absolute; top: 712px; left: 0px; width: 1024px; height: 56px; }
-#footer {clear:both; margin:auto; width:1024px; height:60px; padding-top:18px;}
-#footer #share {width: 290px; float:left;}
-#footer #share img {margin-left:3px; margin-right:1px; border:none}
-#footer #copyrights { float: left; width: 730px; font-family: Arial, Helvetica, sans-serif; font-size: .55em; color: #bcbcbd; }
-#prel { position: absolute; top: 23px; left: 320px; font-family: Arial, Helvetica, sans-serif; font-size: .70em; }
-	#prel a { color: #fff; }
-	#prel a:hover { color: #ff6600; }
-.bgOn {background:url(images/clickHere1.gif) left top no-repeat;}
-.bgOff {background:none;}
-	p.leader { margin: 0; padding: 0; text-align: left; font: 11px/14px Arial, Helvetica, san-serif; margin: 0 0 10px 0; }
-		p.leader a { color: #bcbcbd; text-decoration: underline; }
-		p.leader a:hover { color: #c9a862; text-decoration: underline; }
-	p.subl { margin: 0; padding: 0; text-align: left; font: 10px/13px Arial, Helvetica, san-serif; margin: 0 0 10px 0; }
-		p.subl a { color: #bcbcbd; text-decoration: none; }
-		p.subl a:hover { color: #c9a862; text-decoration: none; }
-* { outline: none; -moz-outline-style: none; }
--->
-</style>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta name="title" content="Browser for the Better">
+	<meta name="description" content="1 in 8 people struggle to have enough to eat. Download Windows® Internet Explorer® 8 for free and Microsoft will donate 8 meals to Feeding America®.">
+	<link rel="image_src" href="images/FeedingAmerica_Hunger.jpg">
 
-    <script src="http://static.fyreball.com/meteor.js" type="text/javascript"></script>
+	<title>Internet Explorer 8 - Browser for the Better - Privacy Statement</title>
+
+	<style type="text/css" media="all">@import "includes/bb.css";</style>
+	<link rel="shortcut icon" href="favicon.ico">	
+	<script type="text/javascript" src="includes/jquery.js"></script>
+    <script type="text/javascript" src="http://static.fyreball.com/meteor.js"></script>
     <script type="text/javascript">meteor.tracking.track('c8ca0205-0ea2-df5d-0433-89d59e166a61',{ url_storage_source : 'hash', hash_prefix: 'getie8:',cookie_name : 'IE8_betterbrowser' });</script>
+
 </head>
 
 <body>
 
-<div id="cont_wrap">
-
-<div id="container">
-  <div id="col1">
-    <div id="header"><img src="images/page1-header-browserbetter.gif" alt="Browser for the Better" width="563" height="71" border="0" align="left"><a href="download.html"><img src="images/header-ie8.gif" alt=" " width="159" height="72" border="0" align="right"></a></div>
-    <div id="content">
-      <div id="text">
-        <form><input type="button" value="Back" onclick="window.close();return true;"> </form>
-        <p><a href="http://browserforthebetter.com">Browserforthebetter.com</a><br>
-        (Last updated: June 12, 2009)</p>
+<div id="container_pr">
+		
+	<div id="privacy_statement">
+		<p><a href="http://browserforthebetter.com">Browserforthebetter.com</a></p>		
         <p>Microsoft is committed to protecting your privacy. This Web site does not request or collect any personal information from you. This site may collect certain information about your visit, such as the name of the Internet service provider and the Internet Protocol (IP) address through which you access the Internet; the date and time you access the site; the pages that you access while at the site and the Internet address of the Web site from which you linked directly to our site. This information is used for the operation and improvement of the site.</p>
         <p>Please note that this privacy statement applies only to BrowserForTheBetter.com. It does not apply to other online or offline Microsoft sites, products or services.</p>
-        <p>This site may contain links to other sites and services. We encourage you to review the privacy statements of those sites and services that you choose to visit, so that you can understand how they may collect, use and share your personal information. Microsoft is not responsible for the privacy statements or practices of sites and services controlled by other companies or organizations. </p>
-      </div>
-    </div>
-  </div>
-    <div id="gb">
-    <img src="images/color-bars.gif" width="291" height="56" alt="Microsoft">
-    <div id="prel">To view Press Release, <a href="http://www.microsoft.com/Presspass/press/2009/jun09/06-10BetterBrowserPR.mspx" target="_blank">click here</a></div>
-    </div>
-    
+        <p>This site may contain links to other sites and services. We encourage you to review the privacy statements of those sites and services that you choose to visit, so that you can understand how they may collect, use and share your personal information. Microsoft is not responsible for the privacy statements or practices of sites and services controlled by other companies or organizations.</p>
+		<p>(Last updated: June 12, 2009)</p>
+	</div>
+	
 </div>
 
-<div id="footer">
+	<div id="footer">
+	
+		<div id="share"><script type="text/javascript">var url_str = "http://www.browserforthebetter.com/#getie8:";url_str = url_str + meteor.tracking.get_url_id();meteor.sharing.write('fe14f050-1123-febf-919a-c5fd3f257104', url_str, '', '');</script></div>
+		<div id="ms_logo"><a href="http://www.microsoft.com/" target="_blank"><span>Microsoft</span></a></div>
+		<div id="get_sl"><a href="http://view.atdmt.com/action/dl_sl_html" target="_blank"><span>Microsoft Silverlight - Download Now</span></a></div>
 
-	<div id="share">
-		<script type="text/javascript">var url_str = "http://www.browserforthebetter.com/#getie8:";url_str = url_str + meteor.tracking.get_url_id();meteor.sharing.write('fe14f050-1123-febf-919a-c5fd3f257104', url_str, '', '');</script>
-	</div>
-  
 	<div id="copyrights">
-		<p class="leader"><a href="http://support.microsoft.com/contactus/?ws=mscom" target="_blank">Contact Us</a> | © 2009 Microsoft Corporation. All rights reserved. | <a href="http://www.microsoft.com/info/cpyright.mspx" target="_blank">Terms of Use</a> | <a href="privacy.html" target="_blank">Privacy Statement</a> | This site hosted for Microsoft by <a href="http://bamideas.com/" target="_blank">BaM.</a></p>
-		<p class="subl">Only complete downloads of Windows® Internet Explorer® 8 through <a href="http://www.browserforthebetter.com" target="_blank">browserforthebetter.com</a> from June 8, 2009 through August 8, 2009 qualify for the charitable donation to Feeding America®. Microsoft® is donating $1.15 per download to Feeding America® up to a maximum of $1,000,000. Meals are used for illustrative purposes only. Meal conversion is effective until June 30th, 2010.</p>
+		<p class="leader"><a href="http://support.microsoft.com/contactus/?ws=mscom" target="_blank">Contact Us</a> | © 2009 Microsoft Corporation. All rights reserved. | <a href="http://www.microsoft.com/info/cpyright.mspx" target="_blank">Terms of Use</a> | <a href="privacy.html" target="_blank">Privacy Statement</a> | This site hosted for Microsoft by <a href="http://bamideas.com/" target="_blank">BaM</a>.</p>
 		<p class="subl">Feeding America's mission is to feed America's hungry through a nationwide network of member food banks and engage our country in the fight to end hunger. For more information, please contact Feeding America at 35 E. Wacker, Suite 2000, Chicago, IL 60601 or visit <a href="http://www.feedingamerica.org" target="_blank">www.feedingamerica.org</a></p>
 	</div>
-  
-</div>
-
-</div>
-
+	  
+	</div>
+	
 <!-- SiteCatalyst code version: H.20.3.
 Copyright 1997-2009 Omniture, Inc. More info available at
 http://www.omniture.com -->
-<script language="JavaScript" type="text/javascript" src="s_code.js"></script>
+<script language="JavaScript" type="text/javascript" src="includes/s_code.js"></script>
 <script language="JavaScript" type="text/javascript"><!--
     /* You may give each page an identifying name, server, and channel on
     the next lines. */
-    s.pageName = "Privacy page"
+    s.pageName = "Better Browser Thank You Page - 09.01.2009"
     s.server = ""
     s.channel = ""
     s.pageType = ""
-    s.prop1 = "Privacy page"
+    s.prop1 = "Better Browser Thank You Page - 09.01.2009"
     /* Conversion Variables */
     s.campaign = ""
     s.state = ""
@@ -110,6 +68,8 @@ http://www.omniture.com -->
     /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
     var s_code = s.t(); if (s_code) document.write(s_code)//--></script>
 <!-- End SiteCatalyst code version: H.20.3. -->
+
+<img src="http://api.fyreball.com/api/conversion_pixel?cookie_name=c8ca0205-0ea2-df5d-0433-89d59e166a61">
 
 
 </body></html>
