lungusa.org (archived on 2009-10-20)
{
  "alexa_rank": 97321,
  "analysis_subcorpus": true,
  "categories": "education;health",
  "char_count": 7437,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.57,
  "homepage_snapshot_redirected_domain": "lungusa.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091001161521id_/http://www.lungusa.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091001161521id_/http%3A//lungusa.org",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "lungusa.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091020020136id_/http%3A//www.lungusa.org/site/pp.asp%3Fc%3DdvLUK9O0E%26b%3D38462",
  "policy_title": "Privacy Policy - American Lung Association site",
  "policy_url": "lungusa.org/site/pp.asp?c=dvLUK9O0E&b=38462",
  "sha1": "2a6d1e86b6869a87632e8bac9f3f0a0dd6223c40",
  "simhash": 8798935815829505215,
  "simhash_updated": true,
  "site_hostname": "lungusa.org",
  "site_url": "http://lungusa.org",
  "smog": 15.16,
  "strict_updated": true,
  "timestamp": "20091020020136",
  "word_count": 1175,
  "year": 2009
}

--- a/l/lu/lun/lungusa.org.html
+++ b/l/lu/lun/lungusa.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lungusa.org privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620070255id_/http%3A//www.lungusa.org/site/pp.asp%3Fc%3DdvLUK9O0E%26b%3D38462) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lungusa.org privacy policy that was archived on 2009-10-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091020020136id_/http%3A//www.lungusa.org/site/pp.asp%3Fc%3DdvLUK9O0E%26b%3D38462) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 <title>Privacy Policy - American Lung Association site</title>
@@ -241,6 +241,7 @@ Menu6_8=new Array("Fact Sheets","http://www.lungusa.org/site/c.dvLUK9O0E/b.44646
         or practices, we would like to know what they are so we can address them. 
         Please contact us at (212) 315-8799 or email us at <a href="mailto:webmaster@lungusa.org">webmaster@lungusa.org.</a>
 
+
 </p></td></tr>
 
 			</tbody></table>
@@ -278,6 +279,6 @@ var pageTracker = _gat._getTracker("UA-2228733-1"); pageTracker._trackPageview()
 
 
 
-<!-- PROD/ASPX 0.375s R: 6/20/2009 12:02:55 AM -->
+<!-- PROD/ASPX 0.109s R: 10/19/2009 7:01:36 PM -->
 
 </body></html>
