articlecube.com (archived on 2009-10-20)
{
  "alexa_rank": 11438,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 7468,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.55,
  "homepage_snapshot_redirected_domain": "articlecube.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090916035609id_/http://www.articlecube.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090916035609id_/http%3A//articlecube.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "articlecube.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091020153310id_/http%3A//www.articlecube.com/site.php%3Fview%3Dprivacypolicy",
  "policy_title": "About Us - Contact Us - TOS - Privacy Policy - ArticleCube",
  "policy_url": "articlecube.com/site.php?view=privacypolicy",
  "sha1": "4af74f79d972e7da370ae31527da5036220704ce",
  "simhash": 9702567681694337170,
  "simhash_updated": false,
  "site_hostname": "articlecube.com",
  "site_url": "http://articlecube.com",
  "smog": 15.95,
  "strict_updated": true,
  "timestamp": "20091020153310",
  "word_count": 1198,
  "year": 2009
}

--- a/a/ar/art/articlecube.com.html
+++ b/a/ar/art/articlecube.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the articlecube.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618142946id_/http%3A//www.articlecube.com/site.php%3Fview%3Dprivacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlecube.com privacy policy that was archived on 2009-10-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091020153310id_/http%3A//www.articlecube.com/site.php%3Fview%3Dprivacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<meta name="Description" content="Free articles by ArticleCube - your free articles directory. Find free articles for your website, ezine or blog. Submit your Articles for free syndication.">
+<meta name="Description" content="Please read our legal pages: TOS, Privacy Policy, About Us and Contact Us pages">
 
 <meta name="Keywords" content="article directory, free articles, articles, article, article search, find articles, submit articles, submission service">
 
 <meta name="Robots" content="index, follow">
 
-<title>Article Directory - Free Articles - ArticleCube</title>
+<title>About Us - Contact Us - TOS - Privacy Policy - ArticleCube</title>
 
 <link rel="shortcut icon" href="http://www.articlecube.com/images/icon.ico">
 
@@ -41,7 +41,7 @@
 <li><a href="http://www.articlecube.com/">Home</a></li>
 <li><a href="http://www.articlecube.com/submitarticles.php">Submit Article</a></li>
 <li><a href="http://www.articlecube.com/topauthors.php">Top Authors</a></li>
-<li><a href="http://www.articlecube.com/online-map.php">Who's Online</a></li>
+
 <li><a href="http://www.articlecube.com/rssfeed.php">RSS Article Feeds</a></li>
 </ul>      </div>
     </div>
@@ -160,7 +160,7 @@ ArticleCube.com reserves the right to change this policy at any time. Please che
           <div class="content"></div>
         </div>
       </div>
-      <div class="right-column">
+      <div class="right-column sma_column smaid_14">
         <div id="block-articlecube-2" class="block block-articlecube">
           <div class="content">
             <div class="clear">
@@ -186,7 +186,7 @@ ArticleCube.com reserves the right to change this policy at any time. Please che
         <div id="block-articlecube-3" class="block block-articlecube highlight">
           <div class="content">
             <div class="ads clear">
-<div class="ad ad-1"><a href="http://www.plr32.com" target="_blank" rel="nofollow"><img src="http://www.articlecube.com/images/_904.gif"></a></div><div class="ad ad-2"><!-- Begin BidVertiser Referral code -->
+<div class="ad ad-1"> <a target="_blank" href="http://chrizzie23.gsniper.hop.clickbank.net"><img src="http://gsniper.com/images/box.gif" alt="n"></a></div><div class="ad ad-2"><!-- Begin BidVertiser Referral code -->
 <script language="JavaScript">var bdv_ref_pid=84336;var bdv_ref_type='i';var bdv_ref_option='p';var bdv_ref_eb='0';var bdv_ref_gif_id='ref_125x125_blue_pbl';var bdv_ref_width=125;var bdv_ref_height=125;</script>
 <script language="JavaScript" src="http://srv.bidvertiser.com/bidvertiser/referral_button.html?pid=84336"></script>
 <noscript><a href="http://www.bidvertiser.com/bdv/BidVertiser/bdv_advertiser.dbm">internet marketing</a></noscript>
@@ -197,13 +197,22 @@ ArticleCube.com reserves the right to change this policy at any time. Please che
  
 
         <div id="block-views-Poll" class="block block-views square">
-          <h2 class="title"><span>Resources</span></h2>
+          <h2 class="title"><span>Featured Articles</span></h2>
           <div class="content">
-<a href="http://www.twitter.com/ArticleCube" target="_blank" rel="nofollow">Follow us on Twitter</a>
-<br>
-<a href="http://www.copyscape.com" target="_blank" rel="nofollow">Copyscape</a>
-<br>
-<a href="http://www.copyright.gov" target="_blank" rel="nofollow">Copyright Info</a>
+<ul>
+<li>
+<a href="http://www.articlecube.com/Article/Download-Youtube-Videos/604655">Download Youtube Videos</a></li>
+<li>
+<a href="http://www.articlecube.com/Article/5-Top-Computer-Viruses/610909">5 Top Computer Viruses</a></li>
+<li>
+<a href="http://www.articlecube.com/Article/How-to-Negotiate-Your-Own-Credit-Card-Debts/552580">How to Negotiate Your Own Credit Card Debts</a></li>
+<li>
+<a href="http://www.articlecube.com/Article/The-Easiest-Way-To-Improve-Your-Credit-Score/534161">The Easiest Way To Improve Your Credit Score</a></li>
+<li>
+<a href="http://www.articlecube.com/Article/Why-Search-Engine-Optimization-important-for-your-website/378964">Why Search Engine Optimization important for your website?</a></li>
+<li>
+<a href="http://www.articlecube.com/Article/The-top-ten-ways-to-be-unhappy-at-work,-especially-after-40/616618">The top ten ways to be unhappy at work, especially after 40!</a></li>
+</ul>
 
 
 
@@ -233,6 +242,7 @@ ArticleCube.com reserves the right to change this policy at any time. Please che
           <li class="leaf"><a href="http://www.articlecube.com/submitguidelines.php">Submission Guidelines</a></li>
           <li class="leaf"><a href="http://www.articlecube.com/site.php?view=termofservice">Terms Of Service</a></li>
           <li class="leaf"><a href="http://www.articlecube.com/site.php?view=privacypolicy">Privacy Policy</a></li>
+          <li class="leaf"><a href="http://www.articlecube.com/online-map.php">Who's Online</a></li>
         </ul>
       </div>
     </div>
@@ -262,5 +272,4 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-962608-1");
 pageTracker._trackPageview();
 </script>
-
 </body></html>
