--- a/n/ne/nea/neatvideo.com.html
+++ b/n/ne/nea/neatvideo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the neatvideo.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617200513id_/http%3A//neatvideo.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the neatvideo.com privacy policy that was archived on 2009-10-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091020165241id_/http%3A//www.neatvideo.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="PRAGMAS" content="NO-CACHE">
