cliffsnotes.com (archived on 2009-10-21)
{
  "alexa_rank": 16762,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 12127,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.2,
  "homepage_snapshot_redirected_domain": "cliffsnotes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091003170714id_/http://www.cliffsnotes.com/WileyCDA/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091003170714id_/http%3A//cliffsnotes.com",
  "interval": "2009_B",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cliffsnotes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091021153530id_/http%3A//www.cliffsnotes.com/WileyCDA/Section/id-305334.html",
  "policy_title": "CliffsNotes Privacy Policy - CliffsNotes",
  "policy_url": "cliffsnotes.com/WileyCDA/Section/id-305334.html",
  "sha1": "9c5470ebe6272b992d1f98588f80938848412fb1",
  "simhash": 16614181952285786819,
  "simhash_updated": false,
  "site_hostname": "cliffsnotes.com",
  "site_url": "http://cliffsnotes.com",
  "smog": 15.07,
  "strict_updated": false,
  "timestamp": "20091021153530",
  "word_count": 1977,
  "year": 2009
}

--- a/c/cl/cli/cliffsnotes.com.html
+++ b/c/cl/cli/cliffsnotes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cliffsnotes.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617185728id_/http%3A//cliffsnotes.com/WileyCDA/Section/id-305334.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cliffsnotes.com privacy policy that was archived on 2009-10-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091021153530id_/http%3A//www.cliffsnotes.com/WileyCDA/Section/id-305334.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
   <link href="http://media.wiley.com/spa_assets/site/cliffsnotes2/include/style.css" type="text/css" rel="stylesheet">
@@ -21,6 +21,9 @@ CliffsNotes Privacy Policy - CliffsNotes
    <!-- staticFeature ( ref:CLIFFS2_DOUBLECLICK_JS ) -->
     <script language="javascript" type="text/javascript" src="http://media.wiley.com/assets/1306/15/doubleclick.js">
 </script>
+
+ <script language="javascript" type="text/javascript" src="http://media.wiley.com/assets/2034/38/bts_navbar.js">
+</script>
 <!-- / staticFeature ( ref:CLIFFS2_DOUBLECLICK_JS ) -->
    <!-- primaryContent ( isCommon:true property:head ) : /site/cliffsnotes2/pvo/COMMON_head.jsp -->
 <meta name="description" content="Read the CliffsNotes.com Privacy Policy.">
@@ -29,7 +32,7 @@ CliffsNotes Privacy Policy - CliffsNotes
    <meta name="WT.sv" content="">
    <meta name="DCS.dcsuri" content="%2FWileyCDA%2FSection%2Fid-305334.html">
    <meta name="DCS.dcsqry" content="">
-   <meta name="DCS.dcsdat" content="1245265046425">
+   <meta name="DCS.dcsdat" content="1256139328555">
    <meta name="DCSext.Section" content="305334+Privacy+Policy">
    <meta name="DCSext.SiteCd" content="CLIFFSNOTES2">
    <meta name="DCSext.PrimaryContentGroup" content="Sections">
@@ -267,11 +270,6 @@ urchinTracker();
 <!-- /google analytics -->
 <!-- / staticFeature ( ref:CLIFFS2_GOOGLE_ANALYTICS ) -->
    </div>
-   <!-- SmartSource 7 -->
-   <script language="JavaScript">
-time = new Date().getTime();
-document.write('<img border="0" name="dcsimg" width="1" height="1" src="http://smartsource.wiley.com/dcs.gif?dcsuri=%2FWileyCDA%2FSection%2Fid-305334.html&dcsqry=&dcsdat='+time+'&wt.sv=&Section=305334+Privacy+Policy&SiteCd=CLIFFSNOTES2&PrimaryContentGroup=Sections&NavArea=CLIFFSNOTES2_SERVICE&PageType=HTML&Level1=Home">')</script><img border="0" name="dcsimg" width="1" height="1" src="http://smartsource.wiley.com/dcs.gif?dcsuri=%2FWileyCDA%2FSection%2Fid-305334.html&amp;dcsqry=&amp;dcsdat=1580471795369&amp;wt.sv=&amp;Section=305334+Privacy+Policy&amp;SiteCd=CLIFFSNOTES2&amp;PrimaryContentGroup=Sections&amp;NavArea=CLIFFSNOTES2_SERVICE&amp;PageType=HTML&amp;Level1=Home">
-   <!-- / SmartSource 7 -->
    <!-- SmartSource 8 -->
    <script src="/include/smart_source_8/dcs_init.js" type="text/javascript"></script><script src="/include/smart_source_8/dcs_tag.js" type="text/javascript"></script><noscript><img alt="" border="0" name="DCSIMG" width="1" height="1" src="http://sdc8prod1.wiley.com/dcs60s2es00000kbemuolm2uf_1n3j/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.0.3"></noscript>
    <!-- / SmartSource 8 -->
